--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "seneca-memcached",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "memcached plugin for seneca",
   "main": "lib/memcached.js",
   "scripts": {
@@ -24,5 +24,7 @@
     "vows":"*",
     "async":"*",
     "eyes":"*"
-  }
+  },
+
+  "files": ["LICENSE.txt","README.md","lib"]
 }
