--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "seneca-memcached",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "memcached plugin for seneca",
   "main": "lib/memcached.js",
   "scripts": {
@@ -12,19 +12,18 @@
     "memcached",
     "plugin"
   ],
-  "author": "Richard Rodger",
-  "license": "BSD",
+  "author": "Richard Rodger (http://richardrodger.com/)",
+  "license": "MIT",
 
   "dependencies": {
-    "underscore": ">=1.1.4",
-    "memcached": "0.0.10"
+    "underscore": "1.1.x",
+    "memcached": "0.2.x"
   },
 
   "devDependencies": {
-    "vows":"*",
-    "async":"*",
-    "eyes":"*"
+    "seneca": "0.5.x"
   },
 
-  "files": ["LICENSE.txt","README.md","lib"]
+
+  "files": ["LICENSE.txt","README.md","lib/memcached.js"]
 }
